Commenting out rootmap line for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,7 +117,7 @@ install (TARGETS ${libname}
       #Only needed for ROOT6      
 if( ${ROOT_VERSION} VERSION_GREATER "5.99.99")
   install (FILES ${PROJECT_BINARY_DIR}/${DICTNAME}_rdict.pcm DESTINATION ${UTIL_LIB_DIR})
-  install (FILES ${PROJECT_BINARY_DIR}/lib${libname}.rootmap DESTINATION ${UTIL_LIB_DIR})
+#  install (FILES ${PROJECT_BINARY_DIR}/lib${libname}.rootmap DESTINATION ${UTIL_LIB_DIR})
 endif()
 install (FILES antarcticaIceMap.png DESTINATION ${ANITA_UTIL_MAP_DIR} )
 install (FILES anitageom.root DESTINATION ${ANITA_UTIL_MAP_DIR} )
