Fixing header installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ message("DICTNAME is set to ${DICTNAME}" )
 message("PROJECT_BINARY_DIR is set to ${PROJECT_BINARY_DIR}")
 
 
-install (FILES ${OUR_HEADER} DESTINATION ${UTIL_INC_DIR})
+install (FILES ${HEADER_FILES} DESTINATION ${UTIL_INC_DIR})
 install (TARGETS ${libname}
 	ARCHIVE DESTINATION ${UTIL_LIB_DIR}
 	LIBRARY DESTINATION ${UTIL_LIB_DIR}
