add comment support to filter config file; comment out adaptive filters by default

--- a/ucfilters.cfg
+++ b/ucfilters.cfg
@@ -2,8 +2,14 @@ sinsub_03_0
 sinsub_05_0
 sinsub_10_0
 sinsub_10_3
-adsinsub_2_5_3
-adsinsub_2_10_3
-brickwall_2_0 
-brickwall_2_1 
-geom 
+
+
+# Adaptive filters commented out for now. To use them
+# you should probably define UCORRELATOR_SPECAVG_DIR and 
+# generate spectrum averages (otherwise you'll be waiting a whitle). 
+#adsinsub_2_5_3
+#adsinsub_2_10_0
+#sinsub_10_0_ad_2_env_peak
+#brickwall_2_0 
+#brickwall_2_1 
+#geom 
