runToA*.txt now in eventReaderRoot, remove evToRun code duplication

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,5 +124,5 @@ install (FILES anitageom.root DESTINATION ${ANITA_UTIL_MAP_DIR} )
 
 install (FILES macros/runMagicDisplay.C DESTINATION ${UTIL_BIN_DIR})
 install (FILES macros/runMagicDisplayEv.C DESTINATION ${UTIL_BIN_DIR})
-install (FILES macros/runToEvA3.txt DESTINATION ${UTIL_BIN_DIR})
-install (FILES macros/runToEvA4.txt DESTINATION ${UTIL_BIN_DIR})
+#install (FILES macros/runToEvA3.txt DESTINATION ${UTIL_BIN_DIR})
+#install (FILES macros/runToEvA4.txt DESTINATION ${UTIL_BIN_DIR})
